# intelligent-agents-collection

./: .env.example  .env.save  .gitignore  LICENSE  README.md  conversation_memory.json  memory_check.py  pyproject.toml  requirements.txt  run.py
docs/: API_REFERENCE.md  ARCHITECTURE.md
src/: main.py  web_server.py
src/agent/: __init__.py  agent_core.py  memory_manager.py
src/config/: __init__.py  settings.py
src/mcp/: __init__.py  client.py  protocol.py
src/tools/: __init__.py  duckduckgo_tool.py  location_tool.py  weather_tool.py  youtube_tool.py
